# unifi-mqtt

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
unifi_mqtt/: cli.py  constants.py  mqtt.py  translator.py  unifi.py
unifi_mqtt/unifi/: controller.py
unifi_mqtt/unifi/services/: access.py  base.py  network.py  protect.py
